# resourceschedule_background_task_mgr

./: AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_ZH.md  README_zh.md  bgtaskmgr.gni  bundle.json  hisysevent.yaml  ohos.build
frameworks/: AGENTS.md  BUILD.gn  FRAMEWORKS.md
frameworks/common/include/: bgtaskmgr_inner_errors.h  bgtaskmgr_log_wrapper.h  continuous_task_log.h  efficiency_resource_log.h  ipc_util.h  transient_task_log.h
frameworks/common/src/: bgtaskmgr_inner_errors.cpp  bgtaskmgr_log_wrapper.cpp
frameworks/include/: background_task_manager.h  background_task_mgr_proxy.h  background_task_mgr_stub.h  background_task_subscriber_proxy.h  background_task_subscriber_stub.h  expired_callback_proxy.h  expired_callback_stub.h  ibackground_task_mgr.h  ibackground_task_mgr_ipc_interface_code.h  ibackground_task_subscriber.h  ibackground_task_subscriber_ipc_interface_code.h  iexpired_callback.h  iexpired_callback_ipc_interface_code.h
frameworks/ipc/include/: background_task_manager.h  background_task_mgr.h  background_task_mgr_proxy.h  background_task_mgr_stub.h  background_task_subscriber_proxy.h  background_task_subscriber_stub.h  expired_callback_proxy.h  expired_callback_stub.h  ibackground_task_mgr.h  ibackground_task_subscriber.h  iexpired_callback.h
frameworks/ipc/src/: background_task_manager.cpp  background_task_mgr.cpp  background_task_mgr_proxy.cpp  background_task_mgr_stub.cpp  background_task_subscriber_proxy.cpp  background_task_subscriber_stub.cpp  expired_callback_proxy.cpp  expired_callback_stub.cpp
frameworks/src/: background_task_manager.cpp  background_task_mgr_proxy.cpp  background_task_mgr_stub.cpp  background_task_subscriber_proxy.cpp  background_task_subscriber_stub.cpp  expired_callback_proxy.cpp  expired_callback_stub.cpp
frameworks/test/unittest/: BUILD.gn  bgtask_framework_abnormal_unit_test.cpp  bgtask_framework_unit_test.cpp
interfaces/innerkits/: BUILD.gn  IBackgroundTaskMgr.idl  IBackgroundTaskSubscriber.idl  IExpiredCallback.idl  libbgtaskmgr_innerkits.versionscript
interfaces/innerkits/include/: background_common.h  background_mode.h  background_sub_mode.h  background_task_mgr_helper.h  background_task_mode.h  background_task_state_info.h  background_task_submode.h  background_task_subscriber.h  config_data_source_type.h  continuous_task_callback_info.h  continuous_task_cancel_reason.h  continuous_task_info.h  continuous_task_mode.h  continuous_task_param.h  continuous_task_request.h  continuous_task_request_info.h  continuous_task_submode.h  continuous_task_suspend_reason.h  delay_suspend_info.h  efficiency_resource_info.h  efficiency_resources_cpu_level.h  event_type.h  expired_callback.h  resource_callback_info.h  resource_type.h  transient_task_app_info.h  user_auth_result.h
interfaces/innerkits/src/: background_mode.cpp  background_sub_mode.cpp  background_task_mgr_helper.cpp  background_task_mode.cpp  background_task_state_info.cpp  background_task_submode.cpp  background_task_subscriber.cpp  continuous_task_callback_info.cpp  continuous_task_info.cpp  continuous_task_mode.cpp  continuous_task_param.cpp  continuous_task_request.cpp  continuous_task_request_info.cpp  continuous_task_submode.cpp  continuous_task_suspend_reason.cpp  delay_suspend_info.cpp  efficiency_resource_info.cpp  efficiency_resources_cpu_level.cpp  expired_callback.cpp  resource_callback_info.cpp  resource_type.cpp  transient_task_app_info.cpp
interfaces/kits/: BUILD.gn
interfaces/kits/js/: @ohos.backgroundTaskManager.d.ts  @ohos.resourceschedule.backgroundTaskManager.d.ts  @ohos.resourceschedule.backgroundTaskMgr.d.ts
resources/: AGENTS.md  BUILD.gn  BackgroundTaskResources.p7b  RESOURCES.md  publicity.xml
resources/AppScope/: app.json
resources/main/: config.json
resources/signature/: BackgroundTaskResources.gni  BackgroundTaskResources.p7b
services/: AGENTS.md  BUILD.gn  SERVICES.md  libbgtaskmgr_services.versionscript
services/common/include/: app_mgr_helper.h  app_state_observer.h  background_task_observer.h  banner_notification_event_observer.h  bg_task_config_file_info.h  bgtask_config.h  bgtask_hitrace_chain.h  bundle_manager_helper.h  common_utils.h  data_storage_helper.h  dialog_event_observer.h  game_pre_launch_mgr.h  report_hisysevent_data.h  system_event_observer.h  time_provider.h
services/common/src/: app_mgr_helper.cpp  app_state_observer.cpp  app_state_observer.cpp~Stashed changes  background_task_observer.cpp  banner_notification_event_observer.cpp  bg_task_config_file_info.cpp  bgtask_config.cpp  bgtask_hitrace_chain.cpp  bundle_manager_helper.cpp  common_utils.cpp  data_storage_helper.cpp  dialog_event_observer.cpp  game_pre_launch_mgr.cpp  report_hisysevent_data.cpp  system_event_observer.cpp
services/continuous_task/: AGENTS.md  CONTINUOUS_TASK.md
services/continuous_task/include/: app_state_observer.h  banner_notification_record.h  bg_continuous_task_dumper.h  bg_continuous_task_mgr.h  bundle_manager_helper.h  common_utils.h  config_change_observer.h  continuous_task_record.h  data_storage.h  notification_tools.h  os_account_observer.h  remote_death_recipient.h  system_event_observer.h  task_notification_subscriber.h
services/continuous_task/src/: app_state_observer.cpp  background_task_observer.cpp  banner_notification_record.cpp  bg_continuous_task_dumper.cpp  bg_continuous_task_mgr.cpp  bundle_manager_helper.cpp  config_change_observer.cpp  continuous_task_record.cpp  data_storage.cpp  distributed_component_listener_stub.cpp  notification_tools.cpp  os_account_observer.cpp  system_event_observer.cpp  task_notification_subscriber.cpp
services/core/include/: background_task_mgr_service.h
services/core/src/: background_task_mgr_service.cpp
services/efficiency_resources/: EFFICIENCY_RESOURCES.md
services/efficiency_resources/include/: application_record_storage.h  bg_efficiency_resources_mgr.h  efficiency_resources_dumper.h  (+4 more)
services/transient_task/: TRANSIENT_TASK.md
test/systemtest/: BUILD.gn  bgtask_dump_test.cpp
utils/bgtask_observer/: BUILD.gn
utils/dump/: BUILD.gn
(+391 files in other folders)
