# Copyright (C) 2022-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./signature/BackgroundTaskResources.gni")

ohos_hap("backgroundtaskresources_hap") {
  hap_profile = "entry/src/main/module.json"

  deps = [
    ":backgroundtask_dialog_js_assets",
    ":backgroundtask_res",
  ]
  publicity_file = "publicity.xml"
  hap_name = "BackgroundTaskResources"
  module_install_dir = "app/com.ohos.backgroundtaskmgr.resources"
  certificate_profile = "signature/BackgroundTaskResources.p7b"
  subsystem_name = "resourceschedule"
  part_name = "background_task_mgr"
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "HwBackgroundTaskMgr release"
    private_key_path = "HwBackgroundTaskMgr release"
    compatible_version = "9"
  }
}

ohos_js_assets("backgroundtask_dialog_js_assets") {
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("backgroundtask_dialog_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("backgroundtask_res") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":backgroundtask_dialog_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}

group("bgtaskmgr_resources") {
  deps = [ ":backgroundtaskresources_hap" ]
}