# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

config("bgtaskmgr_service_public_config") {
  include_dirs = [
    "continuous_task/include",
    "core/include",
    "transient_task/include",
    "test/include",
  ]
}

ohos_shared_library("bgtaskmgr_service") {
  sources = [
    "continuous_task/src/app_state_observer.cpp",
    "continuous_task/src/bg_continuous_task_mgr.cpp",
    "continuous_task/src/bundle_manager_helper.cpp",
    "continuous_task/src/continuous_task_record.cpp",
    "continuous_task/src/data_storage.cpp",
    "continuous_task/src/system_event_observer.cpp",
    "continuous_task/src/task_notification_subscriber.cpp",
    "core/src/background_task_mgr_service.cpp",
    "transient_task/src/bg_transient_task_mgr.cpp",
    "transient_task/src/bgtask_common.cpp",
    "transient_task/src/decision_maker.cpp",
    "transient_task/src/delay_suspend_info_ex.cpp",
    "transient_task/src/device_info_manager.cpp",
    "transient_task/src/event_hub.cpp",
    "transient_task/src/input_manager.cpp",
    "transient_task/src/pkg_delay_suspend_info.cpp",
    "transient_task/src/suspend_controller.cpp",
    "transient_task/src/time_provider.cpp",
    "transient_task/src/timer_manager.cpp",
    "transient_task/src/watchdog.cpp",
  ]

  public_configs = [ ":bgtaskmgr_service_public_config" ]

  public_deps = [
    "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk",
    "${bgtaskmgr_interfaces_path}/innerkits:bgtaskmgr_innerkits",
    "//base/notification/ans_standard/frameworks/ans/native:ans_innerkits",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//third_party/jsoncpp",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "dmsfwk_standard:zuri",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]

  part_name = "background_task_mgr"
}
