# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

config("bgtaskmgr_innerkits_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("bgtaskmgr_innerkits") {
  sources = [
    "src/background_task_mgr_helper.cpp",
    "src/background_task_subscriber.cpp",
    "src/continuous_task_callback_info.cpp",
    "src/continuous_task_param.cpp",
    "src/delay_suspend_info.cpp",
    "src/efficiency_resource_info.cpp",
    "src/expired_callback.cpp",
    "src/resource_callback_info.cpp",
    "src/transient_task_app_info.cpp",
  ]

  public_configs = [
    ":bgtaskmgr_innerkits_public_config",
    "//foundation/resourceschedule/background_task_mgr/frameworks:bgtaskmgr_public_config",
  ]

  deps = [ "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk" ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "resourceschedule"
  part_name = "background_task_mgr"
  innerapi_tags = [ "platformsdk" ]
  version_script = "libbgtaskmgr_innerkits.versionscript"
}
