# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

cflags = []

config("bgtaskmgr_public_config") {
    include_dirs = [
        "napi/include",
    ]
}

ohos_shared_library("backgroundtaskmanager") {
    sources = [
        "napi/src/request_suspend_delay.cpp",
        "napi/src/cancel_suspend_delay.cpp",
        "napi/src/get_remaining_delay_time.cpp",
        "napi/src/common.cpp",
        "napi/src/init.cpp",
    ]


    include_dirs = [
        "//base/notification/ans_standard/frameworks/ans/core/common/include",
        "//utils/native/base/include",
        "//utils/system/safwk/native/include",
        "//third_party/node/src",
    ]

    public_configs = [ ":bgtaskmgr_public_config" ]

    deps = [
        "${bgtaskmgr_interfaces_path}/innerkits:bgtaskmgr_innerkits",
        "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk",
        "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
        "//foundation/aafwk/standard/interfaces/kits/napi/aafwk/inner/napi_common:napi_common",
        "//foundation/ace/napi:ace_napi",
        "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
        "//foundation/multimedia/image_standard/interfaces/innerkits:image",
        "//utils/native/base:utils",
    ]

    external_deps = [
        "aafwk_standard:base",
        "aafwk_standard:want",
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_standard:samgr_proxy",
    ]
    relative_install_dir = "module"
    subsystem_name = "resourceschedule"
    part_name = "background_task_mgr"

}