# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/background_task_mgr/bgtaskmgr.gni")

group("bgtask_observer_target") {
  deps = [ ":bgtask_observer" ]
}

ohos_executable("bgtask_observer") {
  include_dirs = [ "include" ]

  sources = [
    "src/bgtask_observer.cpp",
    "src/main.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${bgtaskmgr_frameworks_path}:bgtaskmgr_fwk",
    "${bgtaskmgr_interfaces_path}/innerkits:bgtaskmgr_innerkits",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
  ]

  configs = []

  external_deps = [
    "ability_base:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  install_enable = false
  part_name = "background_task_mgr"
}
